# bf_interpreter

./: CMakeLists.txt  README.md
include/: details.h  interpreter.h
src/: interpreter.cpp  main.cpp
test/: test.cpp
